fix:change colour of background hover for better visibility on nav bar

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,10 @@ ul {
     padding: 1rem;
 }
 
+li:hover {
+    background-color: #dad4d5;
+}
+
 h1 {
     font-family: 'Vollkorn', sans-serif;
     letter-spacing: 2px;
@@ -152,6 +156,7 @@ main {
         height: 90vw;
         width: 90vw;
         margin-bottom: 20px;
+        border: 5px solid;
     }
 
     .img-text {
@@ -163,6 +168,18 @@ main {
     }
 
 
+}
+
+/*Table of opening hours*/
+.open-hours {
+    padding: 0 80px;
+    margin-top: 1050px;
+    border: black;
+    font-weight: 500;
+    
+}
+table th td {
+    border: 1px solid #a59b9b61;
 }
 
 
@@ -191,7 +208,7 @@ footer {
     border: 5px solid;
     padding: 3rem;
     text-align: center;
-    background: url(.//images/salad-closeup-612x612.webp) no-repeat center center / cover;
+    background: url(../images/salad-closeup-612x612.webp) no-repeat center center / cover;
 
     img {
         opacity: 0.5;
